--- a/SharePoint-CSOM/news/resources/css/news.css
+++ b/SharePoint-CSOM/news/resources/css/news.css
@@ -2,7 +2,11 @@
 .ms-cui-topBar2 {
 	background-color: #FFE1E1;
 }
+/* OVERRIDE SP Core */
 
+#pageTitle {
+	margin:auto;
+}
 /* SET FLUID WIDTH */
 #contentBox {
 	min-width: 200px;
@@ -32,8 +36,27 @@
 	width: 90%;
 }
 
+/* WEBPARTS */ 
+.ms-webpartzone-cell {
+	margin: auto auto 10px;
+}
+
+/* CUSTOM SITE */
+
 /* POSTS */
 .news-main-content { margin-top: 10px; }
+.ms-blog-postBoxDate { 
+	background-color: #E24912;
+}
+.ms-blog-postBoxDate {
+	color: #fff;
+	background-color: #E24912;
+	border-color: #e24912;
+}
+.ms-blog-command-noLeftPadding a:visited,
+#blgcat {
+	color: #008444;
+}
 .ms-blog-postBoxMargin { position: relative; }
 .ms-blog-postBoxMargin > h2 { display: none; }
 .ms-blog-postBoxMargin > h2.news-post-title { 
@@ -44,7 +67,8 @@
 .ms-blog-postBoxMargin > h2.news-post-title a:link,
 .ms-blog-postBoxMargin > h2.news-post-title a:hover,
 .ms-blog-postBoxMargin > h2.news-post-title a:visited {
-	color: #0072c6!important;
+	color: #EA3692!important;
+	font-weight: 800;
 }
 .news-post-pageimage {
 	float: right;
@@ -100,7 +124,7 @@ h2.news-post-title .news-post-title-image img {
 	bottom: -1px;
 	right: 0;
 	font-weight: bold;
-	color: #0072c6;
+	color: #EA3692;
 	width: 50px;
 	height: 18px;
 	background: rgba(255,255,255,0.85);
@@ -116,7 +140,7 @@ h2.news-post-title .news-post-title-image img {
 .news-post-bodysummary .ellipsis a:link,
 .news-post-bodysummary .ellipsis a:hover,
 .news-post-bodysummary .ellipsis a:visited {
-	color: #0072c6!important;
+	color: #EA3692!important;
 }
 
 /* MONTH/DATE TAG CLOUD */
@@ -124,15 +148,16 @@ h2.news-post-title .news-post-title-image img {
 .news-post-date-cloud ul { margin: 0; padding: 0; display: none; }
 .news-post-date-cloud li { margin:0; padding: 2px 0; list-style: none; font-family: Calibri; }
 
-.news-post-date-cloud li.month a,
-.news-post-date-cloud li.month a:link,
-.news-post-date-cloud li.month a:active,
-.news-post-date-cloud li.month a:hover,
-.news-post-date-cloud li.month a:visited { 
+.news-post-date-cloud li a,
+.news-post-date-cloud li a:link,
+.news-post-date-cloud li a:active,
+.news-post-date-cloud li a:hover,
+.news-post-date-cloud li a:visited
+ { 
     font-size: 1em; 
     color: #666666; 
     text-decoration: none; 
-    margin-left: 25px; 
+    margin-left: 15px; 
     padding:0px 5px;
     transition: background-color 150ms ease-out;
 }
@@ -140,7 +165,8 @@ h2.news-post-title .news-post-title-image img {
 { background-color: rgba(128,128,128,0.2); }
 
 .news-post-date-cloud li.year { margin: 5px 0 0 10px; }
-.news-post-date-cloud li.year h2 { font-size: 2em; color: #0072c6; margin: 0; padding:0; }
+.news-post-date-cloud li.year h2 { font-size: 2em; color: #0072C6; margin: 0; padding:0; }
+.news-post-date-cloud li.archive h2 { font-size: 1.3em; color: #0072C6; margin: 0; padding:0; }
 .news-post-date-cloud li.year h2[rel='1'] { font-size: 1.6em; }
 
 .news-post-date-cloud li.month a:link[rel='12']
@@ -159,9 +185,41 @@ h2.news-post-title .news-post-title-image img {
 .news-post-date-cloud li.month a:link[rel='4'],
 .news-post-date-cloud li.month a:link[rel='3']
 { font-size: 1.1em; }
+.news-post-date-cloud li.month a:link,
 .news-post-date-cloud li.month a:link[rel='2'],
 .news-post-date-cloud li.month a:link[rel='1'],
 .news-post-date-cloud li.month a:link[rel='0']
 { font-size: 1em; }
+.news-post-date-cloud li.archive a:link,
+.news-post-date-cloud li.archive a:visited {
+	color: #0072C6;
+	font-size: 1.2em; 
+	margin-left: 5px; 
+}
+
+
+/* CATEGORY TAG CLOUD */
+.news-post-category-cloud { margin: 10px 10px 10px 0px; }
+.news-post-category-cloud ul { margin: 0; padding: 0; display: none; }
+.news-post-category-cloud li { margin:0; padding: 2px 0; list-style: none; font-family: Calibri; }
+
+.news-post-category-cloud li a,
+.news-post-category-cloud li a:link,
+.news-post-category-cloud li a:active,
+.news-post-category-cloud li a:hover,
+.news-post-category-cloud li a:visited
+ { 
+    font-size: 1.3em; 
+    color: #666666; 
+    text-decoration: none; 
+    margin-left: 15px; 
+    padding:0px 5px;
+    transition: background-color 150ms ease-out;
+}
+.news-post-category-cloud li.category a:hover
+{ background-color: rgba(128,128,128,0.2); }
+
+.news-post-category-cloud li.title { margin: 5px 0 0 10px; }
+.news-post-category-cloud li.title h2 { font-size: 2em; color: #0072C6; margin: 0; padding:0; }
 
 
