--- a/SharePoint-CSOM/news/resources/css/news.css
+++ b/SharePoint-CSOM/news/resources/css/news.css
@@ -70,13 +70,25 @@
 	color: #EA3692!important;
 	font-weight: 800;
 }
-.news-post-pageimage {
+.news-post-pageimage,
+.news-post-pageimage.Right {
 	float: right;
 }
-.news-post-pageimage img {
+.news-post-pageimage.Left {
+	float: left;
+}
+.news-post-pageimage img,
+.news-post-pageimage.Right img {
 	border: 0;
 	width: 600px;
 	margin-left: 10px;
+}
+.news-post-pageimage.Left img {
+	margin-left: 0;
+	margin-right: 10px;
+}
+.news-post-pageimage img.default {
+	opacity: 0.5;
 }
 .news-post-pageimage + div[class^='ExternalClass'] p:first-of-type {
 	margin-top: 0px;
@@ -90,6 +102,9 @@ h2.news-post-title .news-post-title-image {
 h2.news-post-title .news-post-title-image img {
 	height: 50px;
 	border: 0;
+}
+h2.news-post-title .news-post-title-image img.default {
+	opacity: 0.5;
 }
 #blgcat {
 	text-transform: uppercase;
@@ -107,7 +122,14 @@ h2.news-post-title .news-post-title-image img {
 .ms-blog-postBoxDate .ms-textSmall {
 	font-size: 1.1em;
 }
-.news-post-bodysummary { position: relative; max-height: 50px; overflow: hidden; margin-bottom: 10px; margin-top: 10px; margin-left: 30px; }
+.news-post-bodysummary {
+	position: relative;
+	max-height: 100px;
+	overflow: hidden;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-left: 30px;
+}
 .news-post-bodysummary > div[class^='ExternalClass'],
 .news-post-bodysummary > div[class^='ExternalClass'] * { 
 	font-family: "Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif!important; 
@@ -125,22 +147,32 @@ h2.news-post-title .news-post-title-image img {
 	right: 0;
 	font-weight: bold;
 	color: #EA3692;
-	width: 50px;
-	height: 18px;
+	width: 100%;
+	overflow: hidden;
+	height: 15px;
 	background: rgba(255,255,255,0.85);
 	text-align: right;
 	font-size: 18pt;
 }
 .news-post-bodysummary .ellipsis a {
 	display: block;
-	height: 10px;
+	height: 18px;
 	line-height: 10px;
+	background: white;
+	width: 40px;
+	right: 0;
+	position: absolute;
+	text-align: center;
+	top: -2px;
 }
 .news-post-bodysummary .ellipsis a,
 .news-post-bodysummary .ellipsis a:link,
-.news-post-bodysummary .ellipsis a:hover,
 .news-post-bodysummary .ellipsis a:visited {
 	color: #EA3692!important;
+}
+.news-post-bodysummary .ellipsis a:hover {
+	color: #0072C6!important;
+	letter-spacing: 5px;
 }
 
 /* MONTH/DATE TAG CLOUD */
@@ -222,4 +254,28 @@ h2.news-post-title .news-post-title-image img {
 .news-post-category-cloud li.title { margin: 5px 0 0 10px; }
 .news-post-category-cloud li.title h2 { font-size: 2em; color: #0072C6; margin: 0; padding:0; }
 
+
+/* POPULAR POSTS */
+.news-post-popular { margin: 0 0 30px 0; }
+.news-post-popular ul { margin: 0; padding: 0; display: none; }
+.news-post-popular li { margin:0; padding: 2px 0; list-style: none; font-family: Calibri; }
+
+.news-post-popular li a,
+.news-post-popular li a:link,
+.news-post-popular li a:active,
+.news-post-popular li a:hover,
+.news-post-popular li a:visited
+ { 
+    font-size: 1.3em; 
+    color: #EA3692; 
+    text-decoration: none; 
+    padding:5px 10px;
+    display: inline-block;
+    transition: background-color 150ms ease-out;
+}
+.news-post-popular li.article a:hover
+{ background-color: rgba(128,128,128,0.2); }
+
+.news-post-popular li.title { margin: 0; padding: 0; }
+.news-post-popular li.title h2 { font-size: 2em; color: #0072C6; margin: 0; padding:0; }
 
