--- a/SharePoint-CSOM/news2/resources/css/news-responsive.css
+++ b/SharePoint-CSOM/news2/resources/css/news-responsive.css
@@ -44,76 +44,22 @@ footer,header,hgroup,nav,section,summary {
 
 /* desktop */
 @media screen and (min-width: 980px) {
-	.news-post-pageimage img,
-	.news-post-pageimage.Right img { max-width: 325px; margin-left: 5px; }
-	.news-post-pageimage.Left img { margin-right: 5px; }
-	
-	.ms-blog-postBoxMargin > h2.news-post-title {}
-	.ms-blog-postBoxMargin > h2.news-post-title { font-size: 2.0em; } /* reduce the post title size */
 }
 @media screen and (min-width: 1280px) {
-	.news-post-pageimage img,
-	.news-post-pageimage.Right img { max-width: 520px; margin-left: 10px; }
-	.news-post-pageimage.Left img { margin-right: 10px; }
 }
 @media screen and (min-width: 1440px) {
-	.news-post-pageimage img,
-	.news-post-pageimage.Right img { max-width: 600px; margin-left: 10px; }
-	.news-post-pageimage.Left img { margin-right: 10px; }
 }
 
 /* phablet (landscape) */
 @media screen and (min-width: 769px) and (max-width: 979px) {
-	.news-post-pageimage,
-	.news-post-pageimage.Right { float: none; clear: both; }
-	.news-post-pageimage.Left { float: none; clear: both; }
-
-	.news-post-pageimage img,
-	.news-post-pageimage.Right img { max-width: 100%; margin-left: 0; }
-	.news-post-pageimage.Left img { margin-right: 0; }
-
-	.news-post-title-image { display: none; } /* hide the post rollup image */
-	.ms-blog-postBoxMargin > h2.news-post-title { 
-		font-size: 1.4em;  /* reduce the post title size */
-		margin: 0 70px 3px 0; 
-	}
-
-	/* post tag line */
-	.news-post-title + .ms-metadata { margin-right: 70px; }
-	/* new-post-date */
-	.news-post-postdate { height: 28px; width: 56px; }
-	.news-post-postdate span { margin-top: 0; }
-
-	.news-post-bodysummary {}
 }
 
 /* phablet (portrait) */
 @media screen and (max-width: 768px) {
 	.news-post-date-cloud { margin: 0 20px 10px 0px; }
 	.news-post-category-cloud { margin: 10px 20px 0 0px; }
-	.news-post-title-image { display: none; } /* hide the post rollup image */
-
-	.news-post-pageimage,
-	.news-post-pageimage.Right { float: none; clear: both; }
-	.news-post-pageimage.Left { float: none; clear: both; }
-
-	.news-post-pageimage img,
-	.news-post-pageimage.Right img { max-width: 100%; margin-left: 0; }
-	.news-post-pageimage.Left img { margin-right: 0; }
-
-	.news-post-bodysummary { margin-top: 0; }
-
-	/* post tag line */
-	.news-post-title + .ms-metadata { margin-right: 70px; }
-	/* new-post-date */
-	.news-post-postdate { height: 32px; width: 56px; }
-	.news-post-postdate span { margin-top: 0; }
 
 /* start: stacked display */
-	.ms-blog-postBoxMargin > h2.news-post-title { 
-		font-size: 1.8em; 
-		margin: 0 70px 3px 0;
-	}
 
 /* start: responsive cloud menus */
 	.news-post-category-cloud .category,
@@ -146,30 +92,17 @@ footer,header,hgroup,nav,section,summary {
 }
 
 @media screen and (min-width: 481px) and (max-width: 767px) {
-
+	.news-post-item .box {
+		margin-right: 10px;	
+	}
 }
 
 /* smartphone */
 @media screen and (max-width: 480px) {
-	.news-post-title-image { display: none; } /* hide news rollup image */
-
-	.news-post-pageimage,
-	.news-post-pageimage.Right,
-	.news-post-pageimage.Left { display: none; }
-
-	/* new-post-date */
-	.news-post-postdate { height: 22px; width: 52px; }
-	.news-post-postdate span { margin-top: 1px; }
-
-/* start: stacked display */
-	.news-main-content .ms-blog-postBody { max-height: 55px; }
-	.ms-blog-postBoxMargin > h2.news-post-title { 
-		font-size: 1.4em; 
+	.news-post-item .box {
+		margin-right: 10px;	
 	}
 }
 
 @media screen and (max-width: 360px) {
-	.ms-blog-postBoxMargin > h2.news-post-title { 
-		font-size: 1.2em; 
-	}
 }
